# sillon

./: .envrc  .gitignore  Makefile  PUBLISH.md  README.md  mkdocs.yml  profiling.txt  pyproject.toml
.github/workflows/: deploy-docs.yml  publish.yml  test.yml
docs/: README.md  cli.md  common.md  contribute.md  core.md  index.md  installation.md  interface.md  py.md
docs/dev/: architecture.md  contributing.md  development.md
docs/dev/internals/: silloncommon.md  silloncore.md
docs/guide/: analysis.md  cli.md  install.md  logging.md
docs/reference/: sillonlab.md  sillonpy.md
examples/basic-01/: basic.py  profiling.txt
examples/basic-01/.sillon/: config.json  database.sql
examples/basic-01/.sillon/glob/c4c2d593-87ed-4e1d-8617-bbba2a7474da/: glob.hdf5
examples/sillonlab/: profiling.txt  sillonlab.ipynb  sim.py
examples/sillonlab/.sillon/: config.toml  database.sql
examples/sillonlab/.sillon/glob/7ccf985f-e85b-443b-90d8-cbe369abc9a7/: glob.hdf5
overrides/: home.html
